--- a/src/Hvz/GameBundle/Resources/views/components.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/components.html.twig
@@ -32,11 +32,11 @@
                     {{ components.nav_internal_link('players', path('hvz_players'), 'Players', selected) }}
                     {{ components.nav_internal_link('tags', path('hvz_tags'), 'Tags', selected) }}
                     {{ components.nav_internal_link('spread', '#', 'Spread', selected) }}
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
                     {% if is_granted('ROLE_USER') %}
                         {{ components.nav_internal_link('missions', path('hvz_missions'), 'Missions', selected) }}
                     {% endif %}
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
                     {{ components.nav_internal_link('rules', path('hvz_rules'), 'Rules', selected) }}
                     {{ components.nav_internal_link('register-tag', path('hvz_register_tag'), 'Register Tag', selected) }}
 
@@ -79,4 +79,37 @@
             </div>
         </div>
     </div>
+{% endmacro %}
+
+{% macro delete_dialog(text) %}
+    <div class="modal fade" id="delete-dialog" tabindex="-1" role="dialog" aria-hidden="true" aria-labelledby="delete-dialog-label">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                    <h4 class="modal-title" id="delete-dialog-label">Delete</h4>
+                </div>
+                <div class="modal-body">
+                    <p>{{ text }} <span id="delete-id">ERROR</span>?</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                    <button id="delete-button" type="button" class="btn btn-danger">Delete</button>
+                </div>
+            </div>
+        </div>
+    </div>
+{% endmacro %}
+
+{% macro delete_dialog_script() %}
+    <script>
+        function showDeleteDialog(game, path) {
+            $("#delete-id").html(game);
+            $("#delete-button").click(function() {
+                window.location = path;
+            });
+
+            $('#delete-dialog').modal('show');
+        }
+    </script>
 {% endmacro %}
