--- a/src/Hvz/GameBundle/Resources/views/components.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/components.html.twig
@@ -102,7 +102,7 @@
 {% endmacro %}
 
 {% macro delete_dialog_script() %}
-    <script>
+    <script type="text/javascript">
         function showDeleteDialog(game, path) {
             $("#delete-id").html(game);
             $("#delete-button").click(function() {
