--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,13 +1,81 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8" />
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
-        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
-    </body>
+<html lang="en">
+<head>
+    {% block meta %}
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <meta charset="utf-8">
+        <meta name="description" content="{{ description | default('') }}">
+        <meta name="author" content="{{ author | default('') }}">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+        <meta name="mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+    {% endblock %}
+
+    <link rel="shortcut icon" type="image/png" href="{{ asset('assets/images/favicon.png') }}">
+
+    <title>{% block title %}HvZ @ RIT{% endblock %}</title>
+
+    {% block stylesheets %}
+        {% stylesheets
+        'assets/bower_components/bootstrap/dist/css/bootstrap.css'
+        'assets/bower_components/bootswatch/cosmo/bootstrap.css'
+        'assets/bower_components/snackbarjs/dist/snackbar.min.css'
+        'assets/bower_components/snackbarjs/themes-css/material.css'
+        'assets/css/app.css'
+        filter='cssrewrite' %}
+            <link rel="stylesheet" href="{{ asset_url }}">
+        {% endstylesheets %}
+    {% endblock %}
+
+    {% block javascripts %}
+        <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+        <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+        <![endif]-->
+    {% endblock %}
+
+    {% block head %}
+    {% endblock %}
+</head>
+<body{% block body_def %}{% endblock %}>
+{% block body %}
+{% endblock %}
+
+{% block footer %}
+    <div class="footer">
+        <div class="container">
+            <p class="text-muted pull-right">Copyright &copy; 2014</p>
+        </div>
+    </div>
+{% endblock %}
+
+{% block body_javascripts %}
+    {% javascripts
+    'assets/bower_components/jquery/dist/jquery.min.js'
+    'assets/bower_components/bootstrap/dist/js/bootstrap.min.js'
+    'assets/bower_components/snackbarjs/dist/snackbar.min.js'
+    'assets/bower_components/holderjs/holder.js'
+    %}
+        <script type="text/javascript" src="{{ asset_url }}"></script>
+    {% endjavascripts %}
+
+    {% block snackbars %}
+        {% set toasts = app.session.flashbag.get('page.toast') %}
+        {% if toasts and toasts|length > 0 %}
+            <script type="text/javascript">
+                $(function() {
+                    {% for toast in toasts %}
+                    $.snackbar({
+                        content: "{{ toast | e('js') }}",
+                        style: "snackbar",
+                        timeout: 4000
+                    });
+                    {% endfor %}
+                });
+            </script>
+        {% endif %}
+    {% endblock %}
+{% endblock %}
+</body>
 </html>
