--- a/app/Resources/views/Game/status.html.twig
+++ b/app/Resources/views/Game/status.html.twig
@@ -1,5 +1,5 @@
-{% extends 'HvzGameBundle::base.html.twig' %}
-{% import 'HvzGameBundle::components.html.twig' as components %}
+{% extends '::base.html.twig' %}
+{% import '::components.html.twig' as components %}
 
 {% block title %}
     Status | {{ parent() }}
