--- a/app/Resources/views/components.html.twig
+++ b/app/Resources/views/components.html.twig
@@ -25,7 +25,7 @@
                     HvZ @ RIT
                 </div>
             </div>
-
+{#
             <div class="collapse navbar-collapse" id="navbar-main-nav">
                 <ul class="nav navbar-nav">
                     {{ components.nav_internal_link('status', path('hvz_index'), 'Status', selected) }}
@@ -76,7 +76,7 @@
                         </li>
                     {% endif %}
                 </ul>
-            </div>
+            </div>#}
         </div>
     </div>
 {% endmacro %}
