--- a/app/Resources/views/Game/status.html.twig
+++ b/app/Resources/views/Game/status.html.twig
@@ -16,7 +16,7 @@
             </video>
         </div>
         <div class="container header-text text-center">
-            {% if game.time is defined and game.time is not null %}
+            {% if game %}
                 <h1 id="countdown">
                     <strong>{{ game.time.days }}</strong> days <strong>{{ game.time.hours }}</strong> hours <strong>{{ game.time.minutes }}</strong> minutes <strong>{{ game.time.seconds }}</strong> seconds
                 </h1>
@@ -33,9 +33,9 @@
     <div class="container">
         <div class="row">
             <div class="well col-sm-5 text-center bg-human large-text">
-                {% if game.humans is defined %}
-                    <h1><strong>{{ game.humans }}</strong></h1>
-                    Human{% if game.humans != 1 %}s{% endif %}
+                {% if team.humans %}
+                    <h1><strong>{{ team.humans }}</strong></h1>
+                    Human{% if team.humans != 1 %}s{% endif %}
                 {% else %}
                     There is no game scheduled
                 {% endif %}
@@ -44,9 +44,9 @@
                 <h1>VS</h1>
             </div>
             <div class="well col-sm-5 text-center bg-zombie large-text">
-                {% if game.zombies is defined %}
-                    <h1><strong>{{ game.zombies }}</strong></h1>
-                    Zombie{% if game.zombies != 1 %}s{% endif %}
+                {% if team.zombies %}
+                    <h1><strong>{{ team.zombies }}</strong></h1>
+                    Zombie{% if team.zombies != 1 %}s{% endif %}
                 {% else %}
                     There is no game scheduled
                 {% endif %}
@@ -117,7 +117,7 @@
             });
         }
 
-        {% if game.time is defined and game.time is not null %}
+        {% if game %}
             $(function() {
                 $("#countdown").countdown({{ game.time.timestamp }}, function(event) {
                     var $this = $(this).html(event.strftime(''
