--- a/app/Resources/views/components.html.twig
+++ b/app/Resources/views/components.html.twig
@@ -13,7 +13,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <div class="visible-lg visible-md navbar-brand navbar-brand-centered">
-                    <a href="#">
+                    <a href="{{ path('status_index') }}">
                         {% if type == "lower" %}
                             <img class="logo" src="holder.js/150x150" alt="HvZ @ RIT">
                         {% else %}
