--- a/app/Resources/views/components.html.twig
+++ b/app/Resources/views/components.html.twig
@@ -13,7 +13,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <div class="visible-lg visible-md navbar-brand navbar-brand-centered">
-                    <a href="{{ path('status_index') }}">
+                    <a href="{{ path('web_status') }}">
                         {% if type == "lower" %}
                             <img class="logo" src="holder.js/150x150" alt="HvZ @ RIT">
                         {% else %}
@@ -25,19 +25,19 @@
                     HvZ @ RIT
                 </div>
             </div>
-{#
+
             <div class="collapse navbar-collapse" id="navbar-main-nav">
                 <ul class="nav navbar-nav">
-                    {{ components.nav_internal_link('status', path('hvz_index'), 'Status', selected) }}
-                    {{ components.nav_internal_link('players', path('hvz_players'), 'Players', selected) }}
+                    {{ components.nav_internal_link('status', path('web_status'), 'Status', selected) }}
+                    {#{{ components.nav_internal_link('players', path('hvz_players'), 'Players', selected) }}
                     {{ components.nav_internal_link('tags', path('hvz_tags'), 'Tags', selected) }}
                     {{ components.nav_internal_link('spread', '#', 'Spread', selected) }}
                     {% if is_granted('ROLE_USER') %}
                         {{ components.nav_internal_link('missions', path('hvz_missions'), 'Missions', selected) }}
                     {% endif %}
-                </ul>
+                </ul>#}
                 <ul class="nav navbar-nav navbar-right">
-                    {{ components.nav_internal_link('rules', path('hvz_rules'), 'Rules', selected) }}
+                    {#{{ components.nav_internal_link('rules', path('hvz_rules'), 'Rules', selected) }}
                     {{ components.nav_internal_link('register-tag', path('hvz_register_tag'), 'Register Tag', selected) }}
 
                     {% if is_granted('ROLE_USER') %}
@@ -74,9 +74,9 @@
                                 {% endif %}
                             </ul>
                         </li>
-                    {% endif %}
+                    {% endif %}#}
                 </ul>
-            </div>#}
+            </div>
         </div>
     </div>
 {% endmacro %}
