--- a/app/Resources/views/Game/players.html.twig
+++ b/app/Resources/views/Game/players.html.twig
@@ -23,17 +23,18 @@
                     </div>
                     <div class="col-md-6">
                         <ul class="nav nav-pills">
-                            <li{% if not sort %} class="active"{% endif %}><a href="{{ path('hvz_players') }}">Team</a></li>
-                            <li{% if sort == 'clan' %} class="active"{% endif %}><a href="{{ path('hvz_players', {'sort': 'clan'}) }}">Clan</a></li>
-                            <li{% if sort == 'mods' %} class="active"{% endif %}><a href="{{ path('hvz_players', {'sort': 'mods'}) }}">Mods</a></li>
+                            <li{% if not sort %} class="active"{% endif %}><a href="{{ path('web_players') }}">Team</a></li>
+                            <li{% if sort == 'clan' %} class="active"{% endif %}><a href="{{ path('web_players', {'sort': 'clan'}) }}">Clan</a></li>
+                            <li{% if sort == 'mods' %} class="active"{% endif %}><a href="{{ path('web_players', {'sort': 'mods'}) }}">Mods</a></li>
                         </ul>
                     </div>
                 </div>
             </div>
             <div class="col-md-5 col-md-offset-2 col-sm-8">
-                <form role="search" action="{{ path('hvz_players_search') }}" method="get">
+                <form role="search" action="{{ path('web_players_search') }}" method="get">
                     <div class="input-group">
-                        <input name="term" type="text" class="form-control" placeholder="Search">
+                        <input name="term" type="text" class="form-control" placeholder="Search"
+                                {% if search_term is defined %}value="{{ search_term | e }}{% endif %}">
                         <div class="input-group-btn">
                             <button type="submit" class="btn btn-default">
                                 <span class="glyphicon glyphicon-search"></span>
@@ -65,7 +66,7 @@
                         {% for badge in player.badges %}
                             <img data-toggle="tooltip" data-placement="top" data-html="true"
                                  title="<p><strong>{{ badge.name }}</strong></p><p>{{ badge.description }}</p>"
-                                 src="{{ asset('bundles/hvzgame/images/badges/' ~ badge.image) }}"
+                                 src="{{ asset('assets/images/badges/' ~ badge.image) }}"
                                  alt="{{ badge.name }} badge">
                         {% endfor %}
                     </div>
@@ -79,15 +80,15 @@
             {% endfor %}
         </div>
 
-        {% if previous_page is defined or next_page is defined %}
+        {% if page is defined and (page > 0 or continues == true)%}
             <div class="row">
                 <div class="col-md-4 col-md-offset-4">
                     <ul class="pager">
-                        {% if previous_page is defined and previous_page != -1 %}
-                            <li><a href="{{ path('hvz_players', {'page': previous_page, 'sort': sort}) }}">&larr; Previous</a></li>
+                        {% if page > 0 %}
+                            <li><a href="{{ path('web_players', {'page': page - 1, 'sort': sort}) }}">&larr; Previous</a></li>
                         {% endif %}
-                        {% if next_page is defined and next_page != -1%}
-                            <li><a href="{{ path('hvz_players', {'page': next_page, 'sort': sort}) }}">Next &rarr;</a></li>
+                        {% if continues == true %}
+                            <li><a href="{{ path('web_players', {'page': page + 1, 'sort': sort}) }}">Next &rarr;</a></li>
                         {% endif %}
                     </ul>
                 </div>
