--- a/app/Resources/views/components.html.twig
+++ b/app/Resources/views/components.html.twig
@@ -29,13 +29,13 @@
             <div class="collapse navbar-collapse" id="navbar-main-nav">
                 <ul class="nav navbar-nav">
                     {{ components.nav_internal_link('status', path('web_status'), 'Status', selected) }}
-                    {#{{ components.nav_internal_link('players', path('hvz_players'), 'Players', selected) }}
-                    {{ components.nav_internal_link('tags', path('hvz_tags'), 'Tags', selected) }}
-                    {{ components.nav_internal_link('spread', '#', 'Spread', selected) }}
-                    {% if is_granted('ROLE_USER') %}
+                    {{ components.nav_internal_link('players', path('web_players'), 'Players', selected) }}
+                    {{ components.nav_internal_link('infections', path('web_infections'), 'Infections', selected) }}
+                    {#{{ components.nav_internal_link('spread', '#', 'Spread', selected) }}#}
+                    {#{% if is_granted('ROLE_USER') %}
                         {{ components.nav_internal_link('missions', path('hvz_missions'), 'Missions', selected) }}
-                    {% endif %}
-                </ul>#}
+                    {% endif %}#}
+                </ul>
                 <ul class="nav navbar-nav navbar-right">
                     {#{{ components.nav_internal_link('rules', path('hvz_rules'), 'Rules', selected) }}
                     {{ components.nav_internal_link('register-tag', path('hvz_register_tag'), 'Register Tag', selected) }}
