--- a/app/Resources/views/Game/register_infection.html.twig
+++ b/app/Resources/views/Game/register_infection.html.twig
@@ -2,7 +2,7 @@
 {% import '::components.html.twig' as components %}
 
 {% block title %}
-    Register Tag | {{ parent() }}
+    Register Infection | {{ parent() }}
 {% endblock %}
 
 {% block body_def %}
@@ -12,18 +12,18 @@
 {% block body %}
     {{ parent() }}
 
-    {{ components.navbar('fixed-top', 'register-tag') }}
+    {{ components.navbar('fixed-top', 'register-infection') }}
 
     <div class="container">
         <div class="vertical-space"></div>
 
         <div class="row">
             <div class="col-md-12 text-center">
-                <h2>Register Tag</h2>
+                <h2>Register Infection</h2>
             </div>
         </div>
 
-        {% if errors %}
+        {% if errors is defined %}
             <div id="errors">
                 {% for error in errors %}
                     <div class="row">
@@ -37,19 +37,19 @@
 
         <div class="row">
             <div class="col-md-4 col-md-offset-4">
-                <form method="post" action="{{ path('hvz_register_tag_submit') }}">
-                    <input type="hidden" name="_token" value="{{ csrf_token('hvz_register_tag') }}">
+                <form method="post" action="{#{{ path('hvz_register_tag_submit') }}#}">
+                    <input type="hidden" name="_token" value="{{ csrf_token('hvz_register_infection') }}">
                     <input type="hidden" name="latitude" id="latitude">
                     <input type="hidden" name="longitude" id="longitude">
                     <div class="form-group">
-                        <label for="victim_id">Victim Tag</label>
-                        <input type="text" class="form-control" id="victim_id" name="victim" placeholder="victim tag"
-                               {% if victim %}value="{{ victim }}"{% endif %}>
+                        <label for="human_id">Human ID</label>
+                        <input type="text" class="form-control" id="human_id" name="victim" placeholder="human id"
+                               {% if victim is defined %}value="{{ victim }}"{% endif %}>
                     </div>
                     <div class="form-group">
                         <label for="zombie_id">Zombie ID</label>
                         <input type="text" class="form-control" id="zombie_id" name="zombie" placeholder="zombie id"
-                               {% if zombie %}value="{{ zombie }}"{% endif %}>
+                               {% if zombie is defined %}value="{{ zombie }}"{% endif %}>
                     </div>
                     <button type="submit" class="btn btn-default">Submit</button>
                 </form>
