--- a/app/Resources/views/Game/register_infection.html.twig
+++ b/app/Resources/views/Game/register_infection.html.twig
@@ -37,14 +37,14 @@
 
         <div class="row">
             <div class="col-md-4 col-md-offset-4">
-                <form method="post" action="{#{{ path('hvz_register_tag_submit') }}#}">
+                <form method="post" action="{{ path('web_register_infection_submit') }}">
                     <input type="hidden" name="_token" value="{{ csrf_token('hvz_register_infection') }}">
                     <input type="hidden" name="latitude" id="latitude">
                     <input type="hidden" name="longitude" id="longitude">
                     <div class="form-group">
                         <label for="human_id">Human ID</label>
-                        <input type="text" class="form-control" id="human_id" name="victim" placeholder="human id"
-                               {% if victim is defined %}value="{{ victim }}"{% endif %}>
+                        <input type="text" class="form-control" id="human_id" name="human" placeholder="human id"
+                               {% if human is defined %}value="{{ human }}"{% endif %}>
                     </div>
                     <div class="form-group">
                         <label for="zombie_id">Zombie ID</label>
